Fix z-index of header toolbar

--- a/src/app/components/shared/header/header.component.scss
+++ b/src/app/components/shared/header/header.component.scss
@@ -3,6 +3,7 @@
 .mat-toolbar {
   background-color: var(--surface);
   position: relative;
+  z-index: 2;
 }
 
 .header-icons {
